[gd_scene load_steps=19 format=3 uid="uid://dr0mq7pb3fqgx"]

[ext_resource type="Script" path="res://Player/Scripts/player.gd" id="1_cbm76"]
[ext_resource type="Texture2D" uid="uid://c7hss1ojutfmy" path="res://Player/Sprites/GolemSprite-0001.png" id="2_v0uyh"]
[ext_resource type="Script" path="res://Player/Scripts/state_idle.gd" id="3_6s2qx"]
[ext_resource type="Script" path="res://Player/Scripts/player_state_machine.gd" id="3_jk55v"]
[ext_resource type="Script" path="res://Player/Scripts/state_walk.gd" id="4_rcqbb"]
[ext_resource type="Texture2D" uid="uid://cisk06l0il6kq" path="res://Player/progbar.png" id="6_ydyyp"]
[ext_resource type="Texture2D" uid="uid://c4mhmbe0xd0nk" path="res://Player/progbar2.png" id="7_8onas"]
[ext_resource type="Script" path="res://Levels/BossLevel/TextureProgressBar.gd" id="8_qx4e8"]

[sub_resource type="Animation" id="Animation_3jnvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mt44o"]
resource_name = "idle_down"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 0]
}

[sub_resource type="Animation" id="Animation_or4gr"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 0]
}

[sub_resource type="Animation" id="Animation_7w064"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 0]
}

[sub_resource type="Animation" id="Animation_x7w50"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_ygxjc"]
resource_name = "walk_side"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_ghjrd"]
resource_name = "walk_up"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_peu1v"]
_data = {
"RESET": SubResource("Animation_3jnvy"),
"idle_down": SubResource("Animation_mt44o"),
"idle_side": SubResource("Animation_or4gr"),
"idle_up": SubResource("Animation_7w064"),
"walk_down": SubResource("Animation_x7w50"),
"walk_side": SubResource("Animation_ygxjc"),
"walk_up": SubResource("Animation_ghjrd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ue8hb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i7toh"]
radius = 3.43188

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cbm76")

[node name="Player" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_peu1v")
}

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(0, -20)
scale = Vector2(3, 3)
texture = ExtResource("2_v0uyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -27)
shape = SubResource("CircleShape2D_ue8hb")

[node name="StateMachine" type="Node" parent="Player"]
script = ExtResource("3_jk55v")

[node name="Idle" type="Node" parent="Player/StateMachine"]
script = ExtResource("3_6s2qx")

[node name="Walk" type="Node" parent="Player/StateMachine"]
script = ExtResource("4_rcqbb")

[node name="Invincible_Frame_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Baby_Golem_Timer" type="Timer" parent="."]
wait_time = 20.0

[node name="Spinning_Bullet_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Shield_Cooldown_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -27)
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_i7toh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer" node_paths=PackedStringArray("player")]
offset_left = 29.0
offset_top = 30.0
offset_right = 69.0
offset_bottom = 70.0
scale = Vector2(26.8143, 23.3562)
texture_under = ExtResource("6_ydyyp")
texture_progress = ExtResource("7_8onas")
script = ExtResource("8_qx4e8")
player = NodePath("../..")

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
[connection signal="body_entered" from="Player" to="." method="_on_player_body_entered"]
[connection signal="timeout" from="Invincible_Frame_Timer" to="." method="_on_invincible_frame_timer_timeout"]
[connection signal="timeout" from="Baby_Golem_Timer" to="." method="_on_baby_golem_timer_timeout"]
[connection signal="timeout" from="Spinning_Bullet_Timer" to="." method="_on_spinning_bullet_timer_timeout"]
[connection signal="timeout" from="Shield_Cooldown_Timer" to="." method="_on_shield_cooldown_timer_timeout"]
